--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "6.9.0",
+    "eslint-plugin-react": "^7.37.5",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
