Refactor ESLint configuration and CI workflow
- Added 'prisma' to the list of ignored files in ESLint configuration.
- Updated CI workflow to explicitly specify the ESLint configuration file when running the linter.

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -28,7 +28,7 @@ jobs:
           CI: true
 
       - name: Run ESLint
-        run: pnpm exec eslint .
+        run: pnpm exec eslint . --config eslint.config.js
 
       - name: Run Prettier Check
         run: pnpm exec prettier --check .
