Update ESLint and Prettier configurations
- Removed the ESLint configuration file as it is no longer needed.
- Updated .prettierrc to ensure proper formatting with a newline at the end of the file.
- Reformatted ESLint validation settings in .vscode/settings.json for improved readability.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,12 @@
   "eslint.enable": true,
   "eslint.experimental.useFlatConfig": true,
   "eslint.lintTask.enable": true,
-  "eslint.validate": ["typescript", "typescriptreact", "javascript", "javascriptreact"],
+  "eslint.validate": [
+    "typescript",
+    "typescriptreact",
+    "javascript",
+    "javascriptreact"
+  ],
 
   "typescript.tsdk": "node_modules/typescript/lib",
   "typescript.enablePromptUseWorkspaceTsdk": true,
