Add shared-contract module and update dependencies
- Introduced a new shared-contract module with TypeScript support, including schemas for user validation using Zod.
- Updated package.json to include Zod as a dependency.
- Modified .gitignore to exclude shared-contract build artifacts and node_modules.
- Updated pnpm-lock.yaml to reflect new dependencies and their versions.

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,8 @@ pids
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
 /generated/prisma
+
+
+# Shared Contract
+shared-contract/dist
+shared-contract/node_modules
