--- a/shared-contract/package.json
+++ b/shared-contract/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@your-scope/shared-contract",
+  "name": "@vylo/shared-contract",
   "version": "0.1.0",
   "main": "dist/index.js",
   "type": "module",
