--- a/shared-contract/package.json
+++ b/shared-contract/package.json
@@ -10,6 +10,9 @@
   "files": [
     "dist"
   ],
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
   "devDependencies": {
     "typescript": "^5.8.3"
   },
