--- a/.gitignore
+++ b/.gitignore
@@ -55,9 +55,5 @@ pids
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
+# Prisma
 /generated/prisma
-
-
-# Shared Contract
-shared-contract/dist
-shared-contract/node_modules
