--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
   "dependencies": {
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "6.9.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-unused-imports": "^4.1.4",
     "reflect-metadata": "^0.2.2",
