--- a/shared-contract/tsconfig.json
+++ b/shared-contract/tsconfig.json
@@ -2,9 +2,11 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "commonjs",
+    "experimentalDecorators": true,
     "declaration": true,
     "outDir": "dist",
     "strict": true,
+    "strictPropertyInitialization": false,
     "esModuleInterop": true,
     "skipLibCheck": true
   },
