--- a/shared-contract/package.json
+++ b/shared-contract/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vylo-app/shared-contract",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "main": "dist/index.js",
   "type": "module",
   "types": "dist/index.d.ts",
@@ -17,6 +17,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@nestjs/mapped-types": "^2.1.0",
     "class-validator": "^0.14.2",
     "zod": "^3.25.51"
   }
