--- a/shared-contract/tsconfig.json
+++ b/shared-contract/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "commonjs",
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
     "experimentalDecorators": true,
     "declaration": true,
     "outDir": "dist",
